--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -39,6 +39,11 @@
         android:id="@+id/tv_trailer_label"
         android:textStyle="bold"
         android:text="@string/query_trailers"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/butt_share"
+        android:text="@string/share"/>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="96dp"
