--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -5,9 +5,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/tv_trailer_item"/>
-    <TextView
+<!--    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_trailer_item_share"
-        android:text="@string/share"/>
+        android:text="@string/share"/>-->
 </RelativeLayout>
